2004-01-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/license.c: Updated copyright date range.

	* src/libcommon/munge_defs.h, src/libcommon/munge_msg.c
	  src/libcommon/munge_msg.h, src/libmunge/ctx.c,
	  src/libmunge/ctx.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/libmunge/msg_client.c,
	  src/libmunge/munge.h, src/munge/unmunge.c, src/munged/cred.c,
	  src/munged/cred.h, src/munged/dec_v1.c, src/munged/enc_v1.c,
	  src/munged/msg_server.c, src/munged/msg_server.h:
	  Changed protocol between client (libmunge) and server (munged)
          to allow credential data & metadata to be returned on error.

	* src/munge/unmunge.c(display_meta):
	  Added check for errors on the file stream "fp_meta".

2003-12-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/msg_server.c(munge_msg_server_thread):
	  Fixed _munge_msg_recv() error from getting logged twice.

	* src/libcommon/munge_msg.c(_munge_msg_send, _munge_msg_recv):
	  Fixed error conditions that were not errno conditions.

2003-12-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c(_munge_msg_send):
	  Changed to use gather-writes.

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 128 to 256.

2003-11-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.57, automake-1.7.9, libtool-1.5.0a.

	* src/libcommon/munge_defs.h, src/munged/Makefile.am,
	  src/munged/conf.c, src/munged/cred.h, src/munged/dec_v1.c,
	  src/munged/hash.c, src/munged/hash.h, src/munged/munged.c,
	  src/munged/replay.c, src/munged/replay.h, src/munged/thread.c,
	  src/munged/thread.h, src/munged/timer.c, src/munged/timer.h:
	  Added support for replay detection/prevention.

2003-10-28  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.57, automake-1.7.8, libtool-1.5.0a.

	* src/etc/Makefile.am: Added support for /etc/init.d/ (Debian).

2003-10-24  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.2.

2003-10-14  Chris Dunlap  <cdunlap@llnl.gov>
